# ai_study

./: .gitignore  README.md  pyproject.toml
llms/: early_stopping.ipynb  hallucination.ipynb  llms_training.md  pyproject.toml  self_attention.ipynb  transformers.ipynb
slms/: pyproject.toml
