[tool.poetry]
name = "llms"
version = "0.1.0"
description = "LLMS study"
authors = ["vorges-data <vinicius.jborges36@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
