[tool.poetry]
name = "llms"
version = "0.1.0"
description = "LLMS study"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.3.0"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
matplotlib = "^3.10.3"
scikit-learn = "^1.7.0"
transformers = "^4.52.4"
torch = "^2.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 