[tool.poetry]
name = "slms"
version = "0.1.0"
description = "Studies about Small Language Models"
authors = ["vorges-data <vinicius.jborges36@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
